--- a/05_Classes/05_Classes.csproj
+++ b/05_Classes/05_Classes.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Calculator.cs" />
     <Compile Include="Greeter.cs" />
     <Compile Include="MethodTests.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="PersonTests.cs" />
+    <Compile Include="Room.cs" />
     <Compile Include="VehicleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vehicle.cs" />
