--- a/06_Inheritance/06_Inheritance.csproj
+++ b/06_Inheritance/06_Inheritance.csproj
@@ -50,9 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="Mammal.cs" />
     <Compile Include="AnimalTests.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PersonTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
