--- a/05_Classes/05_Classes.csproj
+++ b/05_Classes/05_Classes.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Person.cs" />
     <Compile Include="PersonTests.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="CalculatorTests.cs" />
     <Compile Include="VehicleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vehicle.cs" />
